<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InboxCubeTestProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_register">Register</string>
    <string name="label_user_name">User Name: </string>
    <string name="label_password">Password: </string>
    <string name="label_confirm_password">Confirm: </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="label_forgot_password">Forgot Password</string>

</resources>
