<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/label_user_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tvUserName"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_marginStart="10dp"
        android:ems="8" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etUserName"
        android:layout_alignBottom="@+id/tvPassword"
        android:ems="8" 
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:id="@+id/tvForgotPSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etUserName"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:text="@string/label_forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:clickable="true"
        android:onClick="onForgotPSWClick"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvPassword"
        android:layout_below="@+id/tvForgotPSW"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login" 
        android:onClick="onLoginClick"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLogin"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_alignEnd="@+id/tvForgotPSW"
        android:layout_marginEnd="20dp"
        android:text="@string/register" 
        android:onClick="onRegisterClick"/>

</RelativeLayout>
